Update on evaluation

--- a/tests/yaml_files/bind/override_with_str_test.yaml
+++ b/tests/yaml_files/bind/override_with_str_test.yaml
@@ -11,5 +11,5 @@ skip
 
 ###VALIDATE
 from tests.utils import cubic_f
-self.assertIs(result.f.yamlfigns.func, cubic_f)
+self.assertIs(result.f.func, cubic_f)
 self.assertEqual(result.f(2), 8)
