--- a/tests/yaml_files/bind/simple_override_test.yaml
+++ b/tests/yaml_files/bind/simple_override_test.yaml
@@ -12,5 +12,5 @@ skip
 
 ###VALIDATE
 from tests.utils import cubic_f
-self.assertIs(result.f.yamlfigns.func, cubic_f)
+self.assertIs(result.f.func, cubic_f)
 self.assertEqual(result.f(2), 11)
