--- a/tests/yaml_files/bind/simple_test.yaml
+++ b/tests/yaml_files/bind/simple_test.yaml
@@ -8,5 +8,5 @@ skip
 
 ###VALIDATE:
 from tests.utils import linear_f
-self.assertEqual(result.f.yamlfigns.func, linear_f)
+self.assertEqual(result.f.func, linear_f)
 self.assertEqual(result.f(2), 5)
