[AutoCAML] Bulk update for AutoCAML

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "pylint",
         "remotes",
         "reparse",
+        "representer",
         "rsplit",
         "strify",
         "subcls",
