[Misc] Rename project to awesomeyaml due to PyPI name conflict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,7 @@
         "subcls",
         "tuples",
         "xref",
-        "yamlfig",
-        "yamlfigns"
+        "awesomeyaml",
+        "ayns"
     ]
 }
