[Function] Better handling of arguments

--- a/tests/yaml_files/bind/eval_arg_test.yaml
+++ b/tests/yaml_files/bind/eval_arg_test.yaml
@@ -7,7 +7,7 @@ f: !bind:tests.utils.linear_f
 ###EXPECTED
 skip
 
-###VALIDATE:
+###VALIDATE
 from tests.utils import linear_f
 self.assertEqual(result.f.func, linear_f)
 self.assertFalse(isinstance(result.f.keywords['a'], str))
