--- a/tests/yaml_files/bind/change_args_test.yaml
+++ b/tests/yaml_files/bind/change_args_test.yaml
@@ -10,7 +10,7 @@ f:
 ###EXPECTED
 skip
 
-###VALIDATE:
+###VALIDATE
 from tests.utils import linear_f
 self.assertEqual(result.f.func, linear_f)
 self.assertEqual(result.f(2), 19)
