--- a/tests/yaml_files/bind/simple_test.yaml
+++ b/tests/yaml_files/bind/simple_test.yaml
@@ -6,7 +6,7 @@ f: !bind:tests.utils.linear_f
 ###EXPECTED
 skip
 
-###VALIDATE:
+###VALIDATE
 from tests.utils import linear_f
 self.assertEqual(result.f.func, linear_f)
 self.assertEqual(result.f(2), 5)
