--- a/tests/yaml_files/call/empty_args_explicit_str_test.yaml
+++ b/tests/yaml_files/call/empty_args_explicit_str_test.yaml
@@ -3,4 +3,4 @@ f: !call:tests.utils.dummy ""
 
 
 ###EXPECTED
-f: !!python/tuple [!!python/tuple [], {}]
+f: !!python/tuple [!!python/tuple [''], {}]
