--- a/tests/yaml_files/call/scalar_arg_str_test.yaml
+++ b/tests/yaml_files/call/scalar_arg_str_test.yaml
@@ -2,6 +2,8 @@
 f: !call:tests.utils.dummy "test"
 
 
-###ERROR
-awesomeyaml.errors.ParsingError
-Argument to the !call:<function_name> node should be either a dict, list/tuple or an empty string! Got: 'test'
+###EXPECTED
+skip
+
+###VALIDATE
+self.assertEqual(result.f, (("test",),{}))
