--- a/tests/yaml_files/bind/empty_args_explicit_str_test.yaml
+++ b/tests/yaml_files/bind/empty_args_explicit_str_test.yaml
@@ -1,5 +1,5 @@
 ---
-f: !bind:tests.utils.dummy "test"
+f: !bind:tests.utils.dummy ""
 
 
 ###EXPECTED
@@ -8,4 +8,4 @@ skip
 ###VALIDATE
 from tests.utils import dummy
 self.assertEqual(result.f.func, dummy)
-self.assertEqual(result.f(), (("test",),{}))
+self.assertEqual(result.f(), (("",),{}))
