[Core] Support !new and !notnew + small refactor of node's properties

--- a/tests/yaml_files/dict/simple_force_del_force_test.yaml
+++ b/tests/yaml_files/dict/simple_force_del_force_test.yaml
@@ -2,7 +2,7 @@
 a: !force
     b: 1
 ---
-a: !metadata{{ 'delete': True, 'merge_mode': 1 }}
+a: !metadata{{ 'delete': True, 'priority': 1 }}
     c: 2
 
 ###EXPECTED
