--- a/tests/yaml_files/dict/simple_weak_del_test.yaml
+++ b/tests/yaml_files/dict/simple_weak_del_test.yaml
@@ -2,7 +2,7 @@
 a:
     b: 1
 ---
-a: !metadata{{ 'delete': True, 'merge_mode': -1 }}
+a: !metadata{{ 'delete': True, 'priority': -1 }}
     c: 2
 
 ###EXPECTED
