--- a/tests/yaml_files/safe/unsafe_arg_test.yaml
+++ b/tests/yaml_files/safe/unsafe_arg_test.yaml
@@ -5,4 +5,4 @@ f: !unsafe [0]
 
 ###ERROR
 EvalError
-.*The node 'f[0]' comes from a source marked as "!unsafe".*
+.*The node 'f' comes from a source marked as "!unsafe".*
