[Eval] Rework EvalNode to: 1) enforce safety of all dependencies, 2) avoid using locals
This includes a very tricky piece of code that dynamically patches Python bytecode! :scream:
Will probably require more extensive testing...
Consider adding an option to fallback to the old style nodes, in case some users face errors
(but keep in mind that handling !unsafe deps might be tricky with old code)

--- a/tests/yaml_files/null/md_negative_2_test.yaml
+++ b/tests/yaml_files/null/md_negative_2_test.yaml
@@ -3,4 +3,4 @@ f: !null{{ 'foo': 'bar' }} null
 
 ###ERROR
 awesomeyaml.errors.ParsingError
-!null does not expect any arguments, but got: .*
+!null does not expect any arguments, but got:
