--- a/tests/yaml_files/new_and_notnew/nested_notnew_missing_test.yaml
+++ b/tests/yaml_files/new_and_notnew/nested_notnew_missing_test.yaml
@@ -12,4 +12,4 @@ f: !notnew
 
 ###ERROR
 MergeError
-.*Node 'f.car.fer' .* requires that the destination already exists but the current config tree does not contain a node under this path .*
+Node 'f.car.fer' .* requires that the destination already exists but the current config tree does not contain a node under this path
