--- a/tests/yaml_files/new_and_notnew/notnew_missing_test.yaml
+++ b/tests/yaml_files/new_and_notnew/notnew_missing_test.yaml
@@ -7,4 +7,4 @@ e: 15
 
 ###ERROR
 MergeError
-.*Node 'e' .* requires that the destination already exists but the current config tree does not contain a node under this path .*
+Node 'e' .* requires that the destination already exists but the current config tree does not contain a node under this path
