--- a/tests/yaml_files/null/md_negative_1_test.yaml
+++ b/tests/yaml_files/null/md_negative_1_test.yaml
@@ -3,4 +3,4 @@ f: !null{{ 'foo': 'bar' }} ''
 
 ###ERROR
 awesomeyaml.errors.ParsingError
-!null does not expect any arguments, but got: .*
+!null does not expect any arguments, but got:
