--- a/tests/yaml_files/required/negative_1_test.yaml
+++ b/tests/yaml_files/required/negative_1_test.yaml
@@ -3,4 +3,4 @@ f: !required ''
 
 ###ERROR
 awesomeyaml.errors.ParsingError
-!required does not expect any arguments, but got: .*
+!required does not expect any arguments, but got:
